# madapple

./: .gitignore  README.md  app.py  convert_labels.py  main.py  mypy.ini  pyproject.toml  pyproject_cuda.toml  split_dataset.py  test.py  test_train.py  train.txt  tune.py  valid.txt
inference/: batch_main.py  batch_processor.py  config.py  detect_apples.py  detector.py  image_processor.py  main.py  model.py  utils.py  visualizer.py
model/: model.py
models/: dataset.py  faster_rcnn.py  transforms.py
research/: compare.py  compare_inference.py  graph.py  main.py
research/inference_benchmark_results/: benchmark_results.json
research/model_comparison_results/: final_report.json  intermediate_results.json
research/model_comparison_results/fcos/training_history/: training_history.json
research/model_comparison_results/retinanet/training_history/: training_history.json
train/: cross_validation.py  cv_config.json  dataset.py  example.py  logger.py  main.py  model.py  normalization_utils.py  trainer.py  utils.py  weather_augmentation.py
train/cv_results/: cv_log.txt  cv_results.json  fold_results.csv  metrics_summary.csv
train/cv_results_5/: cv_results.json
train/cv_results_727/: cv_results.json
train/training_history/: training_history.json  training_history_1.json
utils/: invalid.py  logging.py  utils.py  visualization.py
